[change] 1. add patch file api 2. modify delete file api (remove req body) 3. add new key "isSigned" to file document
